k8s/torrents/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: internal
  rules:
  - host: torrents.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080
